objects/ASI_eForm_User_Profile__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Line_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_eForm_User_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Ownership_Email__c</fullName>
        <label>Ownership Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Service_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Service_Period_From__c</fullName>
        <label>Service Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Service_Period_To__c</fullName>
        <label>Service Period To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_User_Alias__c</fullName>
        <label>User Alias</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_User_Company__c</fullName>
        <label>User Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pernod Ricard Asia</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard China</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Gulf</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard India</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Indonesia</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Japan</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Korea</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Malaysia</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Philippines</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Singapore</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Taiwan</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Thailand</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Vietnam</fullName>
                </value>
                <value>
                    <fullName>Premium Wine Brand</fullName>
                </value>
                <value>
                    <fullName>Chivas Brothers Ltd.</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Hong Kong Service Hub</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Travel Retail Asia</fullName>
                </value>
                <value>
                    <fullName>AMDC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_User_Country__c</fullName>
        <label>User Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Gulf</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_User_Department__c</fullName>
        <label>User Department</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_eForm_User_Company__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Administration / Management Assistance / Facilities</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>General Management</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Systems &amp; Technology</fullName>
                </value>
                <value>
                    <fullName>Institutional / Public Affairs</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Retail Operations</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales (Domestic &amp; International Markets)</fullName>
                </value>
                <value>
                    <fullName>Supply Chain / Logistics / Customer Service</fullName>
                </value>
                <value>
                    <fullName>International Brand Development</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Innovation &amp; Commercial Development</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Strategy &amp; Business Development</fullName>
                </value>
                <value>
                    <fullName>Manufacturing &amp; Projects</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_User_Position__c</fullName>
        <label>User Position</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>ASI eForm User Profile</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>ASI_eForm_Active__c</columns>
        <columns>ASI_eForm_Service_Account__c</columns>
        <columns>ASI_eForm_User_Company__c</columns>
        <columns>ASI_eForm_User_Department__c</columns>
        <columns>ASI_eForm_First_Name__c</columns>
        <columns>ASI_eForm_Last_Name__c</columns>
        <columns>ASI_eForm_Line_Manager__c</columns>
        <columns>ASI_eForm_Ownership_Email__c</columns>
        <columns>ASI_eForm_Service_Period_From__c</columns>
        <columns>ASI_eForm_Service_Period_To__c</columns>
        <columns>ASI_eForm_User_Alias__c</columns>
        <columns>ASI_eForm_User_Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PR_HK_Asia_Travel_Retail</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Active__c</columns>
        <columns>ASI_eForm_Line_Manager__c</columns>
        <columns>ASI_eForm_Service_Account__c</columns>
        <columns>ASI_eForm_Service_Period_From__c</columns>
        <columns>ASI_eForm_Service_Period_To__c</columns>
        <columns>ASI_eForm_User_Alias__c</columns>
        <columns>ASI_eForm_User_Company__c</columns>
        <columns>ASI_eForm_User_Country__c</columns>
        <columns>ASI_eForm_User_Department__c</columns>
        <columns>ASI_eForm_User_Position__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_eForm_User_Company__c</field>
            <operation>contains</operation>
            <value>Travel</value>
        </filters>
        <label>PR HK Asia Travel Retail</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PR_HK_Hub_Service</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_User_Company__c</columns>
        <columns>ASI_eForm_User_Country__c</columns>
        <columns>ASI_eForm_User_Department__c</columns>
        <columns>ASI_eForm_User_Position__c</columns>
        <columns>ASI_eForm_User_Alias__c</columns>
        <columns>ASI_eForm_Active__c</columns>
        <columns>ASI_eForm_Line_Manager__c</columns>
        <columns>ASI_eForm_Service_Account__c</columns>
        <columns>ASI_eForm_Service_Period_From__c</columns>
        <columns>ASI_eForm_Service_Period_To__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_eForm_User_Company__c</field>
            <operation>contains</operation>
            <value>Hub</value>
        </filters>
        <label>PR HK Hub Service</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PR_Hong_Kong</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Active__c</columns>
        <columns>ASI_eForm_Line_Manager__c</columns>
        <columns>ASI_eForm_Service_Account__c</columns>
        <columns>ASI_eForm_Service_Period_From__c</columns>
        <columns>ASI_eForm_Service_Period_To__c</columns>
        <columns>ASI_eForm_User_Alias__c</columns>
        <columns>ASI_eForm_User_Company__c</columns>
        <columns>ASI_eForm_User_Country__c</columns>
        <columns>ASI_eForm_User_Department__c</columns>
        <columns>ASI_eForm_User_Position__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_eForm_User_Company__c</field>
            <operation>contains</operation>
            <value>Hong Kong</value>
        </filters>
        <label>PR Hong Kong</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ASI eForm User Profiles</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>